samples/_failures_safe/1761520312_f22483_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b2283c36.c: In function ‘main’:
./samples/SAFE/__tmp_b2283c36.c:144:17: error: expected declaration or statement at end of input
  144 |                 printf("Enter first matrix:\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_b2283c36.c:144:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b2283c36.c:144:17: error: expected declaration or statement at end of input
